# opengl-game-of-life

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  compile-run  run
shaders/: fill-random.comp  game-of-life.comp  triangle.frag  triangle.vert
src/: CMakeLists.1.txt  main.cpp
